# ha-inhabit

./: .coverage  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yaml  hacs.json  lefthook.yml  package.json  playwright.config.ts  pyproject.toml  release-please-config.json  requirements-dev.txt  st-704-skills-workflow.patch
.devcontainer/: Dockerfile  devcontainer.json  setup-dev.sh
.devcontainer/config/: configuration.yaml
.github/workflows/: ci.yaml  release-please.yaml
custom_components/inhabit/: __init__.py  binary_sensor.py  button.py  config_flow.py  config_patch.py  const.py  device_registry.py  diagnostics.py  frontend_cache.py  manifest.json  occupancy_policy.py  seed.py  services.yaml  strings.json
docs/planning/: ST-704-delivery.md
e2e/: global-setup.ts  helpers.ts  package.json
e2e/tests/: editor.spec.ts
frontend/: biome.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  web-test-runner.config.js
frontend/src/: ha-floorplan-builder.ts  ha-floorplan-panel.ts  ha-floorplan-viewer.ts  index.ts  types.ts  viewer.ts
frontend/src/utils/: svg.ts  (+19 more)
script/: _test_ws.py  develop  lint  logic-simulator  setup  setup-dev  simulate_mmwave.py  test
tests/: __init__.py  conftest.py  test_standalone.py
tests/fake_house/: __init__.py  algorithm_simulator.py  house_simulator.py  local_home_layout.py  local_home_scenarios.py  scenario_runner.py
tests/integration/: __init__.py  conftest.py  test_full_flow.py  test_init.py
tests/mock_homeassistant/: __init__.py
tests/unit/: __init__.py  test_adaptive_timeout.py  test_aggregator_integration.py  test_algorithm_simulator.py  test_automation_rule.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_device_placement.py  test_device_registry.py  test_diagnostics_tools.py  test_engine.py  test_false_vacancy_detector.py  test_fan_dyson_angles.py  test_feedback_controller.py  test_floor_export_import.py  test_floor_import_export.py  test_generators.py  test_house_occupancy_guard.py  test_image_http.py  test_image_store.py  test_local_simulator_house.py  test_logic_simulator.py  test_logic_simulator_server.py  test_migration.py  test_mmwave_integration.py  test_mmwave_websocket.py  test_models.py  test_multi_room_reasoner.py  test_node_migration.py  test_outside_exposure.py  test_pattern_prior.py  test_presence_aggregator.py  test_qol_features.py  test_seal_accuracy.py  test_seal_probability.py  test_sensor_correlation.py  test_sensor_diagnostics.py  test_sensor_reliability.py  test_soft_hints.py  (+5 more)
tools/: __init__.py
tools/logic_simulator/: __init__.py  server.py
(+75 files in other folders)
